# fred-cdnskey-scanner

./: .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.rst  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  configure.ac  dependencies.sh  dependencies.txt
contrib/fedora/: Makefile  cdnskey-scanner.spec  cdnskey-scanner.spec.in  fred-cdnskey-scanner.spec
scripts/docker/centos:7/: Dockerfile
scripts/docker/centos:8/: Dockerfile
scripts/docker/fedora:29/: Dockerfile
scripts/docker/fedora:30/: Dockerfile
scripts/docker/fedora:32/: Dockerfile
scripts/docker/fedora:33/: Dockerfile
scripts/docker/fedora:34/: Dockerfile
scripts/docker/fedora:35/: Dockerfile
scripts/docker/fedora:rawhide/: Dockerfile
scripts/docker/ubuntu:16.04/: Dockerfile
scripts/docker/ubuntu:20.04/: Dockerfile
src/: hostname_resolver.cc  hostname_resolver.hh  insecure_cdnskey_resolver.cc  insecure_cdnskey_resolver.hh  main.cc  secure_cdnskey_resolver.cc  secure_cdnskey_resolver.hh  time_unit.cc  time_unit.hh
src/event/: base.cc  base.hh
src/getdns/: context.cc  context.hh  data.cc  data.hh  error.cc  error.hh  exception.cc  exception.hh  extensions.cc  extensions.hh  extensions_set.cc  extensions_set.hh  request.hh  rrtype.cc  rrtype.hh  solver.cc  solver.hh  solver_fwd.hh  transport.hh
src/util/: fork.cc  fork.hh  is_unique.hh  pipe.cc  pipe.hh
test/: data.txt  smoke.sh
